--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.2.0",
     "cookie": "^1.0.2",
     "cors": "^2.8.5",
+    "flowbite-react": "^0.12.10",
     "jose": "^6.1.0",
     "next": "16.0.0",
     "react": "19.2.0",
