--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "cors": "^2.8.5",
     "flowbite-react": "^0.12.10",
     "jose": "^6.1.0",
+    "lucide-react": "^0.552.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "recharts": "^3.3.0",
     "server-only": "^0.0.1",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
